# trae-orbit

./: .gitignore  capacitor.config.ts  desktop.html  esbuild.config.mjs  index.html  installer.nsi  package-lock.json  package.json  phone.html  prompt.txt  tailwind.config.js  tsconfig.json  vite.config.ts
android/: build.gradle  variables.gradle
android/app/: build.gradle
api/: db.ts  discovery.ts  index.ts  node.ts  sync.ts  ws.ts
api/agents/: runner.ts
api/engine/: scheduler.ts
api/routes/: agents.ts  auth.ts  capsules.ts  devices.ts  nodes.ts
docs/: index.html
shared/: types.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/patches/anyhow-1.0.102/: build.rs
src-tauri/patches/autocfg/: Cargo.toml
src-tauri/patches/autocfg/src/: lib.rs
src-tauri/patches/getrandom-0.3.4/: build.rs
src-tauri/patches/libc-0.2.186/: build.rs
src-tauri/patches/rustc_version-0.4.1/src/: lib.rs
src-tauri/patches/serde-1.0.228/: build.rs
src-tauri/patches/thiserror-2.0.18/: build.rs
src-tauri/patches/typeid-1.0.3/: build.rs
src-tauri/patches/version_check-0.9.5/src/: lib.rs
src-tauri/patches/zmij-1.0.21/: build.rs
src-tauri/src/: lib.rs
src/components/: CapsuleCard.tsx  ContextBridge.tsx  DesktopFrame.tsx  DevicePool.tsx  Layout.tsx  Logo.tsx  NodePanel.tsx  PhoneFrame.tsx  RelayFlow.tsx  StatsOverview.tsx  Timeline.tsx  TopNav.tsx
src/desktop/: App.tsx  main.tsx
src/lib/: api.ts  meta.ts
src/pages/: CapsuleDetail.tsx  Demo.tsx  Home.tsx
src/phone/: App.tsx  main.tsx
src/store/: orbit.ts
src/types/: index.ts
(+12 files in other folders)
